2005-03-09	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c:
	* OOps/schedule.c:
	  fixes in schedule opcodes
	* SConstruct:
	  removed checks for some unused headers
	* H/sysdep.h:
	  set DIRSEP to '\\' on Windows
	* Engine/envvar.c:
	  try_file_open(): do not test for directory on Windows (breaks WINE)

2005-03-08	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c:
	  MIDIinsert(): allow muting instrument by 'q' score opcode
	* Engine/linevent.c:
	  fixes in RTclose(); do not use atexit() to call this function
	  allow use of 'q' score opcode
	* Engine/musmon.c:
	  cleanup(): call RTclose() to close line input (-L)
	* InOut/libsnd.c:
	  do not close line input here; this is done by RTclose()
	* Top/argdecode.c:
	  allow use of -L stdin on Windows (mills_macintosh still disabled)
	* Top/csound.c:
	  csoundScoreEvent(): add p2 to current time, not section start time

2005-03-08	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	  added "event_i" opcode (same as "event" but runs at i-time)
	* Engine/fgens.c, Engine/memalloc.c, Engine/memfiles.c:
	* Engine/musmon.c, H/prototyp.h:
	* OOps/pstream.c, OOps/pvadd.c, OOps/pvread.c:
	* OOps/ugens3.c, OOps/ugens5.c, OOps/ugens8.c, OOps/ugens9.c:
	* OOps/vpvoc.c, Opcodes/hrtferX.c, Opcodes/scansynx.c:
	  major changes to memfile functions
	  added ENVIRON* argument to allow for multiple instances
	  prototypes in prototyp.h rather than all around in various .c files
	* Engine/linevent.c:
	  rewritten event opcode to use insert_score_event()
	  added eventOpcodeI() (i-time version of eventOpcode())
	* Engine/musmon.c:
	  removed unused #includes and declarations
	  improvements and fixes in sensevents() and insert_score_event()
	* Engine/oload.c:
	* H/csoundCore.h:
	  ENVIRON:
	    cosmetic change: moved mrealloc pointer to after mcalloc
	    ldmemfile prototype changed, and also renamed to ldmemfile_
	    added MEMFIL* pointers memfiles and rwd_memfiles
	  changed SSTRCOD to less trivial value